Externalised Kafka topic configuration

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,8 @@ spring:
         spring.json.trusted.packages: "org.gaurav.notification.dto"
       listener:
         ack-mode: manual
+
+app:
+  kafka:
+    topic:
+      notifications: notifications
